--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (Coming Soon!).</a>
     </header>
+    <div>
+        <video src="./resources/videos/excursion.mp4" controls>Video
+            not supported</video>
+        <h2>Your personal travel guide</h2>
+    </div>
+    <div>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <img src="./resources/images/camp.jpg" alt="">
+    </div>
+    <footer>
+        <img src="./resources/images/phone.png" alt="">
+        <h2>Comming Soon for iPhone and Android</h2>
+        <a href="">Download Excursion (Coming Soon!).</a>
+    </footer>
 </body>
 
 </html>
