finalize with css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./resources/css/style.css">
     <title>Codecademy Excursion Page</title>
 </head>
 
@@ -13,7 +14,7 @@
         <a href="">Download Excursion (Coming Soon!).</a>
     </header>
     <div>
-        <video src="./resources/videos/excursion.mp4" controls>Video
+        <video src="./resources/videos/excursion.mp4" autoplay>Video
             not supported</video>
         <h2>Your personal travel guide</h2>
     </div>
@@ -21,10 +22,13 @@
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
         <img src="./resources/images/camp.jpg" alt="">
     </div>
-    <footer>
+    <div>
         <img src="./resources/images/phone.png" alt="">
         <h2>Comming Soon for iPhone and Android</h2>
         <a href="">Download Excursion (Coming Soon!).</a>
+    </div>
+    <footer>
+        &copy Excursion
     </footer>
 </body>
 
