--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="">Download Excursion (Coming Soon!).</a>
     </header>
     <div>
-        <video src="./resources/videos/excursion.mp4" autoplay>Video
+        <video src="./resources/videos/excursion.mp4" loop autoplay>Video
             not supported</video>
         <h2>Your personal travel guide</h2>
     </div>
